# dining-philosophers-problem

./: CMakeLists.txt  CMakeSettings.json  README.md
src/: dpp_precompile.cc  dpp_precompile.h
src/common/: CMakeLists.txt  compiler.h  debug.cc  debug.h  dining_party.cc  dining_party.h  entry_point.cc  entry_point.h  logger.cc  logger.h  os.h  primitive.h  utils.cc  utils.h
src/solutions/central_arbitor/: CMakeLists.txt  central_arbitor.cc  central_arbitor.h
src/solutions/chandra_misra/: CMakeLists.txt  chandra_misra.cc  chandra_misra.h
src/solutions/global_order/: CMakeLists.txt  global_order.cc  global_order.h
src/solutions/n_minus_1_philosophers/: CMakeLists.txt  n_minus_1_philosophers.cc  n_minus_1_philosophers.h
